fixed profile spacing

--- a/bridger.css
+++ b/bridger.css
@@ -279,6 +279,10 @@ tr:nth-of-type(odd) { background-color: #F5FAFC; }
 	padding-top: 20px;
 	padding-bottom: 100px;
 }
+
+ #fbButton {
+	margin-top: 20px;
+}
  
 /*
  ********************************************************************************************
